--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,10 @@
             <div class="form-box">
                 <input type="text" id="phome" placeholder="Phone Number" />
             </div>
-            <label for="basic-url">Your URL</label>
+            <label for="basic-url">Your Companies URL</label>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="basic-addon3">https://example.com/users/</span>
+                    <span class="input-group-text" id="basic-addon3">https://www.example.com</span>
                 </div>
                 <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
             </div>
