--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3">    
         <div class="card mb-4">
                 <div class="card-body">
-                <img class="card-img-top" src="img/moon.jpg" class="img-fluid" alt="Card image cap">
+                <img class="card-img-top" src="./img/moon.jpg" class="img-fluid" alt="Card image cap">
                     <h1 class="card-title">Moon Project</h1>
                     <p class="card-text mt-3">
                         The Moon Project is about working with a Moon image and having text to go with it.
@@ -75,7 +75,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3">    
         <div class="card mb-4">
             <div class="card-body">
-                <img class="card-img-top" src="/img/newspaper.jpg" class="img-fluid" alt="Card image cap">
+                <img class="card-img-top" src="./img/newspaper.jpg" class="img-fluid" alt="Card image cap">
                     <h1 class="card-title">Font Colour Project</h1>
                     <p class="card-text mt-3">
                         The Font Colour prject is about taking a template of a newspaper article layout and adding styling.
@@ -88,7 +88,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3">    
         <div class="card mb-4">
             <div class="card-body">
-                <img class="card-img-top" src="/img/sassy.png" class="img-fluid" alt="Card image cap">
+                <img class="card-img-top" src="./img/sassy.png" class="img-fluid" alt="Card image cap">
                     <h1 class="card-title">SASS Project</h1>
                     <p class="card-text mt-3">
                         The SASS project is about making a news article layout by using a SASS file to store our styling and nesting of code.
@@ -101,7 +101,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3">    
         <div class="card mb-4">
             <div class="card-body">
-                <img class="card-img-top" src="/img/responsive.png" class="img-fluid" alt="Card image cap">
+                <img class="card-img-top" src="./img/responsive.png" class="img-fluid" alt="Card image cap">
                     <h1 class="card-title">Grrbnb 2.0 Project</h1>
                     <p class="card-text mt-3">
                         The Grrbnb project is about using responsive images.
@@ -114,7 +114,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3">    
         <div class="card mb-4">
             <div class="card-body">
-                <img class="card-img-top" src="/img/template.png" class="img-fluid" alt="Card image cap">
+                <img class="card-img-top" src="./img/template.png" class="img-fluid" alt="Card image cap">
                     <h1 class="card-title">Template</h1>
                     <p class="card-text mt-3">
                         The Template is where we would practice with code the teacher would teach us.
@@ -127,7 +127,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3">    
         <div class="card mb-4">
             <div class="card-body">
-                <img class="card-img-top" src="/img/lab.png" class="img-fluid" alt="Card image cap">
+                <img class="card-img-top" src="./img/lab.png" class="img-fluid" alt="Card image cap">
                     <h1 class="card-title">Lab 3 Project</h1>
                     <p class="card-text mt-3">
                         Lab 3 is about learning how to use navbar's and clickable links.
